workspace = { members = ["layered", "tls"] }
[package]
name = "fluxgate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.21", features = ["derive"] }
log = "0.4.22"
log4rs = "1.3.0"
ron = "0.8.1"
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.4"
layered = { path = "./layered/" }
tls = { path = "./tls/" }
