[workspace]
members = ["agent", "layered", "tls", "gui"]


[package]
name = "fluxgate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.94", optional = true }
clap = { version = "4.5.21", features = ["derive"], optional = true }
log = { version = "0.4.22", optional = true }
log4rs = { version = "1.3.0", optional = true }
ron = { version = "0.8.1", optional = true }
serde = { version = "1.0.215", features = ["derive"] }
chrono = { version = "0.4.40", optional = true }
futures = { version = "0.3.31", optional = true }
thiserror = { version = "2.0.12", optional = true }

# Own Deps
agent = { path = "./agent", optional = true }
tls = { path = "./tls", optional = true }
layered = { path = "./layered", optional = true }

[dependencies.async-std]
version = "1.13.1"
features = [
    "attributes",
    "unstable",   # for child proceess
]
optional = true

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[features]
config = []
default = [
    "anyhow",
    "clap",
    "log",
    "log4rs",
    "ron",
    "chrono",
    "futures",
    "thiserror",
    "agent",
    "tls",
    "layered",
    "async-std",
]
